the_project/todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
      app: todo-app
  ports:
    - port: 7777
      protocol: TCP
      targetPort: 6666
